--- a/www/templates/acc-log.html
+++ b/www/templates/acc-log.html
@@ -10,16 +10,17 @@
         <div class="login-field">
             <div class="list list-inset" >
                 <label class="item item-input">
-                    <input type="text" placeholder="Username" ng-model="data.username">
+                    <input id="email" type="email" class="form-control" name="email" value="" placeholder="Email Address" ng-model="vm.credentials.email">
                 </label>
+
                 <label class="item item-input">
-                    <input type="password" placeholder="Password" ng-model="data.password">
+                    <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password" ng-model="vm.credentials.password">
                 </label>
             </div>
-            <button class="button button-block button-calm"ng-click="login()">Login</button>
+            <button type="submit" class="button button-block button-calm">Login</button>
         </div>
         <h2 class="techm_h">Got no account?</h2>
-        <button class="button button-block button-calm" ui-sref="tab.register">Register here!</button>
+        <button class="button button-block button-calm" ui-sref="acc.register">Register here!</button>
 
 
     </ion-content>
