--- a/www/templates/acc-log.html
+++ b/www/templates/acc-log.html
@@ -8,16 +8,18 @@
     <ion-content style="height:90%;top:10%;">
 
         <div class="login-field">
-            <div class="list list-inset" >
-                <label class="item item-input">
-                    <input id="email" type="email" class="form-control" name="email" value="" placeholder="Email Address" ng-model="vm.credentials.email">
-                </label>
+            <form ng-submit="vm.onSubmit()">
+                <div class="list list-inset" >
+                    <label class="item item-input">
+                        <input id="email" type="email" class="form-control" name="email" value="" placeholder="Email Address" ng-model="vm.credentials.email">
+                    </label>
 
-                <label class="item item-input">
-                    <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password" ng-model="vm.credentials.password">
-                </label>
-            </div>
-            <button type="submit" class="button button-block button-calm">Login</button>
+                    <label class="item item-input">
+                        <input id="password" type="password" class="form-control" name="password" value="" placeholder="Password" ng-model="vm.credentials.password">
+                    </label>
+                </div>
+                <button type="submit" class="button button-block button-calm">Login</button>
+            <form>
         </div>
         <h2 class="techm_h">Got no account?</h2>
         <button class="button button-block button-calm" ui-sref="acc.register">Register here!</button>
