--- a/www/templates/after-login.html
+++ b/www/templates/after-login.html
@@ -4,10 +4,10 @@
         <div class = "person-type" style = "background-color:#80DEEA; height:100%; width:100%; posisiton: absolute;">
 
             <!-- NEW: acclogin button on 1st home page -->
-            <a ui-sref="tab.account-view">
+            <a ui-sref="acc.account-view">
                 <div  class="profilviewer">
                     <div class="type-picture">
-                        <div class="info" ui-sref="tab.account-view">
+                        <div class="info" ui-sref="acc.account-view">
                             <h2>{{'view_profile_after_login' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-map waves-effect waves-button waves-light"
@@ -17,10 +17,10 @@
             </a>
 
 
-            <a ui-sref="tab.avgames">
+            <a ui-sref="acc.mygames">
                 <div class="player">
                     <div class="type-picture">
-                        <div class="info" ui-sref="tab.avgames">
+                        <div class="info" ui-sref="acc.mygames">
                             <h2>{{'play_game_after_login' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-map waves-effect waves-button waves-light"
@@ -30,10 +30,10 @@
             </a>
 
 
-            <a ui-sref="tab.teachmenu">
+            <a ui-sref="acc.createdgames">
                 <div  class="teacher">
                     <div class="type-picture">
-                        <div class="info" ui-sref="tab.teachmenu">
+                        <div class="info" ui-sref="acc.createdgames">
                             <h2>{{'create_game_after_login' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-settings waves-effect waves-button waves-light" ui-sref="tab.teachmenu"></button> -->
