--- a/www/templates/profil-view.html
+++ b/www/templates/profil-view.html
@@ -2,7 +2,7 @@
     <div style="position:fixed; top:2%; width:100%;">
         <h2 class="techm_h">Your Profile</h2>
         <!-- <i class="ion-arrow-left-c back_icon" ng-click="cancelGame()"></i> -->
-        <i class="ion-arrow-left-c back_icon" ui-sref="tab.afterlogin"></i>
+        <i class="ion-arrow-left-c back_icon" ui-sref="acc.afterlogin"></i>
         <!-- <button ng-click = "createFile()">ASDGFASDGASDG</button> -->
     </div>
     <ion-content style="height:90%;top:10%;">
