--- a/www/templates/profil-view.html
+++ b/www/templates/profil-view.html
@@ -22,8 +22,8 @@
         https://ionicframework.com/docs/api/directive/ionTabs/
          -->
 
-        <p>Vorname:</p>
-        <p>Nachname:</p>
+        <p>Vorname: {{vm.user.firstName}}</p>
+        <p>Nachname: {{vm.user.lastName}}</p>
         <p>other data:</p>
         <p>other data:</p>
         <p>other data:</p>
