Edit and delete User

--- a/www/templates/profil-view.html
+++ b/www/templates/profil-view.html
@@ -14,7 +14,7 @@
         <p>Birthday: {{vm.user.birthday}}</p>
         <p>Info: {{vm.user.info}}</p>
 
-        <button class="button button-block button-calm" ui-sref="acc.register">Changes</button>
+        <button class="button button-block button-calm" ui-sref="acc.changeUser">Changes</button>
 
     </ion-content>
 
