--- a/www/templates/acc-changeuser.html
+++ b/www/templates/acc-changeuser.html
@@ -8,35 +8,45 @@
     <ion-content style="height:90%;top:10%;">
 
         <form method="post" ng-submit="vm.onSubmit()">
+            <div class="list list-inset" >
             <label class="item item-input">
+                <p>First Name: </p>
                 <input type="text" id="firstName" class="form-control" ng-model="vm.user.firstName" required />
             </label>
             <label class="item item-input">
+                <p>Last Name: </p>
                 <input type="text" id="lastName" class="form-control" ng-model="vm.user.lastName" required />
             </label>
             <label class="item item-input">
+                <p>e-mail: </p>
                 <input type="text" id="email" class="form-control" ng-model="vm.user.email" required />
             </label>
             <label class="item item-input">
+                <p>Username: </p>
                 <input type="text" id="userName" class="form-control" ng-model="vm.user.userName" required />
             </label>
             <label class="item item-input">
+                <p>Password: </p>
                 <input type="password" id="password" class="form-control" ng-model="vm.user.password" />
             </label>
             <label class="item item-input">
+                <p>Repeat Password: </p>
                 <input type="password" id="password2" class="form-control" ng-model="vm.user.password2"/>
             </label>
-            Optional:
+            </div>
+            <p>Optional:</p>
+            <div class="list list-inset" >
             <label class="item item-input">
+                <p>Your birthday: </p>
                 <input type="text" id="birthday" class="form-control" ng-model="vm.user.birthday"/>
             </label>
             <label class="item item-input">
+                <p>Information: </p>
                 <input type="text" id="info" class="form-control" ng-model="vm.user.info"/>
             </label>
-            <label class="item item-input">
-                <button class="btn btn-custom" ng-click="vm.saveUser()">Save</button>
-                <button class="btn btn-danger" ng-click="vm.deleteUser()">Delete</button>
-            </label>
+            </div>
+            <button class="button button-block button-calm" ng-click="vm.saveUser()">Save</button>
+            <button class="button button-block button-calm" ng-click="vm.deleteUser()">Delete</button>
         </form>
 
     </ion-content>
