Fix user errors

--- a/www/templates/acc-tabs.html
+++ b/www/templates/acc-tabs.html
@@ -26,7 +26,7 @@ navigation history that also transitions its views in and out.
     </ion-tab>
 
     <!-- Logout -->
-    <ion-tab title="Logout" icon-off="ion-close" icon-on="ion-close" ui-sref="tab.home" on-select="logout()">
+    <ion-tab title="Logout" icon-off="ion-close" icon-on="ion-close" ui-sref="tab.home" ng-click="logout()">
         <ion-nav-view cache-view="false" name="tab-home"></ion-nav-view>
     </ion-tab>
 
