--- a/www/templates/after-login.html
+++ b/www/templates/after-login.html
@@ -8,7 +8,7 @@
                 <div  class="profilviewer">
                     <div class="type-picture">
                         <div class="info" ui-sref="acc.account-view">
-                            <h2>{{'view_profile_after_login' | translate}}</h2>
+                            <h2>{{'View your Profile' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-map waves-effect waves-button waves-light"
                                ui-sref="tab.acclogin"></button>  -->
@@ -21,7 +21,7 @@
                 <div class="player">
                     <div class="type-picture">
                         <div class="info" ui-sref="acc.mygames">
-                            <h2>{{'play_game_after_login' | translate}}</h2>
+                            <h2>{{'Play a game' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-map waves-effect waves-button waves-light"
                                ui-sref="tab.avgames"></button>  -->
@@ -34,7 +34,7 @@
                 <div  class="teacher">
                     <div class="type-picture">
                         <div class="info" ui-sref="acc.createdgames">
-                            <h2>{{'create_game_after_login' | translate}}</h2>
+                            <h2>{{'Create a new game' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-settings waves-effect waves-button waves-light" ui-sref="tab.teachmenu"></button> -->
                     </div>
