--- a/www/css/style.css
+++ b/www/css/style.css
@@ -74,6 +74,54 @@
     position: absolute;
 }
 
+.person-type .profilviewer {
+    background-color: #1E90FF;
+    height: 34%;
+    position: relative;
+}
+
+.person-type .profilviewer .type-picture {
+    height: 100%;
+    position: relative;
+}
+
+.person-type .profilviewer .type-picture img {
+    top: 2%;
+    left: 19%;
+    position: absolute;
+}
+
+.person-type .profilviewer .type-picture .info {
+    height: 100%;
+    left: 32%;
+    top: 35%;
+    position: absolute;
+    font-family: sans-serif;
+    font-weight: 500;
+    text-align: center;
+    display: block;
+}
+
+.person-type .profilviewer .type-picture .info h2 {
+    color: white;
+    font-family: sans-serif;
+    font-weight: 900;
+    font-size: 5vh;
+}
+
+.person-type .profilviewer .type-picture .info p {
+    color: white;
+    font-family: sans-serif;
+    font-weight: 500;
+    font-size: 2vh;
+}
+
+.person-type .profilviewer .type-picture .next {
+    left: 5%;
+    bottom: 5%;
+    position: absolute;
+}
+
 .person-type .player {
     background-color: #FF8C00;
     height: 33%;
