--- a/www/templates/acc/acc-createdgames.html
+++ b/www/templates/acc/acc-createdgames.html
@@ -2,7 +2,7 @@
     <div style="position:fixed; top:2%; width:100%;">
         <h2 class="techm_h">Created Games</h2>
         <i class="ion-arrow-left-c back_icon" ng-click="cancelGame()"></i>
-        <i class="ion-plus-round newgame_icon" ng-click="startGameCreation()" ui-sref="acc.createdgames"></i>
+        <i class="ion-plus-round newgame_icon" ng-click="startGameCreation()" ui-sref="acc.createmygame"></i>
     </div>
     <ion-content style="height:90%;top:10%;">
         <!-- Display error message if http request fails to fetch games -->
