--- a/www/templates/acc/acc-createmygame.html
+++ b/www/templates/acc/acc-createmygame.html
@@ -6,7 +6,7 @@
             <div class="step_done" ng-show="done.main_info"><img src="./img/icons/work-done.svg"></div>
             <div class="page_content">
                 <div class="content">
-                    <h2>New game</h2>
+                    <h2>New baseGame</h2>
                     <p style="font-size:3vh;">Step1: General Information</p>
                     <div class="main_info">
                         <div class="row">
@@ -16,34 +16,6 @@
                         <div class="row">
                             <span class="input-label">{{'game_description' | translate}}</span>
                             <textarea rows="4" ng-class = "{empty_field: emptyFields[1]}" ng-model="newgame.description" required> </textarea>
-                        </div>
-                        <div class="row">
-                            <span>{{'time_compl' | translate}}</span>
-                            <input type="text" ng-class = "{empty_field: emptyFields[2]}" class="input_time" ng-model="newgame.timecompl" required>
-                        </div>
-                        <div class="row_diff row">
-                            <div class="diff_rate">
-                                <div class="diff_title">
-                                    <span> {{'difficulty' | translate}}</span>
-                                </div>
-                                <span>
-                                   <a ng-click = "rateGame(0)">
-                                       <i class = {{diff[0]}} style="font-size:2em;color:#FFEB3B;"></i>
-                                   </a>
-                                   <a ng-click = "rateGame(1)">
-                                       <i class = {{diff[1]}} style="font-size:2em;color:#FFEB3B;"></i>
-                                   </a>
-                                   <a ng-click = "rateGame(2)">
-                                       <i class = {{diff[2]}} style="font-size:2em;color:#FFEB3B;"></i>
-                                   </a>
-                                   <a ng-click = "rateGame(3)">
-                                       <i class = {{diff[3]}} style="font-size:2em;color:#FFEB3B;"></i>
-                                   </a>
-                                   <a ng-click = "rateGame(4)">
-                                       <i class = {{diff[4]}} style="font-size:2em;color:#FFEB3B;"></i>
-                                   </a>
-                                </span>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -63,18 +35,18 @@
     <!-- Step 2: Choosing the right activity -->
     <ion-slide>
         <div class="page_maininfo page2">
-            <!-- <div class="step_done" ng-show="done.act_type"><img src="./img/icons/work-done.svg"></div> -->
+            <!-- <div class="step_done" ng-show="done.game_mode"><img src="./img/icons/work-done.svg"></div> -->
             <div class="page_content">
                 <div class="content">
                     <h2 style="color:white;">New game</h2>
-                    <p style="color:white;font-size:3vh;"><span>Step 2:</span> Choose Activity Type</p>
+                    <p style="color:white;font-size:3vh;"><span>Step 2:</span> Choose game mode</p>
                     <div class="act_conts">
                         <div class="act">
-                            <a ng-click="chooseActType(1)">
-                                <div class="act_cont" ng-class="{isChoosen: act_type == 1}">
+                            <a ng-click="chooseGameMode(1)">
+                                <div class="act_cont" ng-class="{isChoosen: game_mode == 1}">
                                     <div class="dest_route">
                                         <div style="margin-bottom:25px;">
-                                            <p>Find Destination</p>
+                                            <p>free to play</p>
                                         </div>
                                         <div><img src="./img/icons/dest.svg"></div>
                                     </div>
@@ -82,11 +54,11 @@
                             </a>
                         </div>
                         <div class="act">
-                            <a ng-click="chooseActType(2)">
-                                <div class="act_cont" ng-class="{isChoosen: act_type == 2}">
+                            <a ng-click="chooseGameMode(2)">
+                                <div class="act_cont" ng-class="{isChoosen: game_mode == 2}">
                                     <div class="dest_route">
                                         <div style="margin-bottom:25px;">
-                                            <p>Follow Route</p>
+                                            <p>set game</p>
                                         </div>
                                         <!-- <div style = "margin-bottom:25px;"><p style="font-size:2vh;">Students will follow the route, consisting of several points</p></div> -->
                                         <div><img src="./img/icons/route.svg"></div>
@@ -99,7 +71,7 @@
                 <!-- Navigation buttons -->
                 <div class="page_menu">
                     <div class="navi">
-                        <button class="button button_navi" ng-click="addActivity(); slideTo(2)">
+                        <button class="button button_navi" ng-click="addMode(); slideTo(2)">
                             Continue
                         </button>
                         <a class="stop_b" ng-click="stopCreation()"><p>STOP</p></a>
@@ -110,13 +82,55 @@
     </ion-slide>
 
 
-    <!-- Step 3: Adding Activity Points -->
+    <!-- Step 3:  General Information -->
+    <ion-slide>
+        <div class="page_maininfo page5">
+            <div class="step_done" ng-show="done.main_info"><img src="./img/icons/work-done.svg"></div>
+            <div class="page_content">
+                <div class="content">
+                    <h2>New baseGame</h2>
+                    <p style="font-size:3vh;">Step3: Team Information</p>
+                    <div class="main_info">
+                        <div class="row">
+                            <form name="myForm">
+                              <label>{{'team_title' | translate}}</label><br>
+                              <input class="typeTeamname"  type="text" ng-model="addTeamname" required/>
+
+                              <button ng-click="addTeamnames(addTeamname); addTeamname = null">add</button>
+
+                              <label for="addTeam"> Multiple select: </label><br>
+                              <div name="addTeam" id="selectTeam" ng-model="shownTeamnames" multiple ng-repeat="teamname in data.addedTeam">
+                                  {{teamname}}
+                              </div>
+                              <br>
+                              <tt>multipleSelect = {{data.addedTeam}}</tt><br/>
+                              <button ng-click="forceUnknownOption()">clear input</button><br>
+                            </form>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Navigation buttons -->
+            <div class="page_menu">
+                <div class="navi">
+                    <button class="button button_navi" ng-click="slideTo(3)">
+                        Continue
+                    </button>
+                     <a class="stop_b" ng-click="stopCreation()"><p>STOP</p></a>
+                </div>
+            </div>
+        </div>
+    </ion-slide>
+
+    <!-- Step 4: Adding Base Points -->
     <ion-slide>
         <div class="page_maininfo page3">
             <div class="page_content">
                 <div class="content">
                     <h2 style="color:white;">New game</h2>
-                    <p style="color:white;font-size:3vh;"><span>Step 3:</span> Add points to the map</p>
+                    <h3 style="color:white;">create bases</h3>
+                    <p style="color:white;font-size:3vh;"><span>Step 2:</span> Add points to the map</p>
                     <div class="content_map" data-tap-disabled="true">
                         <leaflet defaults="mainMap.defaults" layers="mainMap.layers" center="mainMap.center" paths="mainMap.paths" markers="mainMap.markers" geojson="mainMap.geojson" ng-if="mainMap"></leaflet>
                     </div>
@@ -124,7 +138,7 @@
             </div>
             <div class="page_menu" ng-hide="allFilled[2]">
                 <div class="navi">
-                    <button class="button button_navi" ng-click="addActPoints(); slideTo(3)">
+                    <button class="button button_navi" ng-click="addActPoints(); slideTo(4)">
                         Continue
                     </button>
                     <a class="stop_b" ng-click="stopCreation()"><p>STOP</p></a>
@@ -134,7 +148,7 @@
     </ion-slide>
 
 
-    <!-- Slide 4: Choose Task Type -->
+    <!-- Slide 5: Choose Task Type -->
     <ion-slide>
         <div class="page_maininfo page4">
             <div class="page_content">
