Get message when Account-Update failed; Get directly from home to after-login when logged in

--- a/www/templates/acc-tabs.html
+++ b/www/templates/acc-tabs.html
@@ -6,7 +6,7 @@ navigation history that also transitions its views in and out.
 <ion-tabs class="tabs-positive tabs-icon-bottom">
 
     <!-- Home menu tab -->
-    <ion-tab title="" icon="ion-ios-home" ui-sref="tab.acc">
+    <ion-tab title="" icon="ion-ios-home" ui-sref="acc.afterlogin">
         <ion-nav-view name="tab-acc"></ion-nav-view>
     </ion-tab>
 
