--- a/www/templates/acc-changeuser.html
+++ b/www/templates/acc-changeuser.html
@@ -1,8 +1,8 @@
 <ion-view view-title="Account View" style="background-color:#B22222;">
     <div style="position:fixed; top:2%; width:100%;">
-        <h2 class="techm_h">Your Profile</h2>
+        <h2 class="techm_h">Edit your profile</h2>
         <!-- <i class="ion-arrow-left-c back_icon" ng-click="cancelGame()"></i> -->
-        <i class="ion-arrow-left-c back_icon" ui-sref="acc.afterlogin"></i>
+        <i class="ion-arrow-left-c back_icon" ui-sref="acc.account-view"></i>
         <!-- <button ng-click = "createFile()">ASDGFASDGASDG</button> -->
     </div>
     <ion-content style="height:90%;top:10%;">
