--- a/www/templates/acc/acc-mygames.html
+++ b/www/templates/acc/acc-mygames.html
@@ -29,29 +29,8 @@
                    <!-- <h2 style="margin-top:10px;">Best Score: {{game.maxp}} </h2> -->
 
 
-                    <button id="fab" class="button button-balanced icon ion-ios-game-controller-b-outline button-fab button-fab-bottom-right" ng-click="gameSelect(game.name)">
+                    <button id="fab" class="button button-balanced icon ion-ios-game-controller-b-outline button-fab button-fab-bottom-right" ng-click="gameSelect(game.name)"></button>
                 </div>
-                <!-- <div class="item item-avatar game-desc">
-                    <img src="./img/navigation.png">
-                    <h2>{{game.name}}</h2>
-                    <div style="display:inline-flex;">
-                        <span class="input-label">{{'difficulty' | translate}}: </span>
-                        <i class={{game.diff[0]}} style="font-size:2em;color:#03A9F4;"></i>
-                        <i class={{game.diff[1]}} style="font-size:2em;color:#03A9F4;"></i>
-                        <i class={{game.diff[2]}} style="font-size:2em;color:#03A9F4;"></i>
-                        <i class={{game.diff[3]}} style="font-size:2em;color:#03A9F4;"></i>
-                        <i class={{game.diff[4]}} style="font-size:2em;color:#03A9F4;"></i>
-                    </div>
-                </div>
-                <div class="item item-body game-desc">
-                    <span>
-                       {{game.description}}
-                    </span>
-                    <p>
-                        <a class="subdued"> <i class="icon ion-clock" style="font-size:20px;"></i> {{game.timecompl}}</a>
-                    </p>
-
-                    <button id="fab" class="button button-balanced icon ion-ios-game-controller-b-outline button-fab button-fab-bottom-right" ng-click="gameSelect(game.name)"> -->
             </a>
         </div>
     </ion-content>
