remove friends; permalinks to friends accounts

--- a/www/templates/acc-friendaccount.html
+++ b/www/templates/acc-friendaccount.html
@@ -19,6 +19,7 @@
                 <td ng-click="friendAccount()" id="friend"><a>{{friend}}</a></td>
             </tr>
         </table>
+        <button class="button button-block button-calm" ng-click="deleteFriend()">remove friend</button>
 
     </ion-content>
 
