--- a/www/templates/acc/acc-playmygame.html
+++ b/www/templates/acc/acc-playmygame.html
@@ -226,7 +226,7 @@
     </div>
 
     <ion-content scroll=false data-tap-disabled="true">
-        <div class="map-container" ng-controller="StudentMapCtrl">
+        <div class="map-container" ng-controller="ProfStudentMapCtrl">
             <div id="map">
                 <leaflet defaults="map.defaults" layers="map.layers" center="map.center" paths="map.paths" markers="map.markers" event-broadcast="map.events" ng-if="map"></leaflet>
             </div>
