users to games, users to teams, teams to games

--- a/www/templates/acc/acc-createmygame.html
+++ b/www/templates/acc/acc-createmygame.html
@@ -98,11 +98,11 @@
                               <button ng-click="addTeamnames(addTeamname); addTeamname = null">add</button>
 
                               <label for="addTeam"> Multiple select: </label><br>
-                              <div name="addTeam" id="selectTeam" ng-model="shownTeamnames" multiple ng-repeat="teamname in data.addedTeam">
+                              <div name="addTeam" id="selectTeam" ng-model="shownTeamnames" multiple ng-repeat="teamname in addedTeam">
                                   {{teamname}}
                               </div>
                               <br>
-                              <tt>multipleSelect = {{data.addedTeam}}</tt><br/>
+                              <tt>multipleSelect = {{addedTeam}}</tt><br/>
                               <button ng-click="forceUnknownOption()">clear input</button><br>
                             </form>
 
