--- a/www/templates/acc/acc-playmygame.html
+++ b/www/templates/acc/acc-playmygame.html
@@ -171,7 +171,7 @@
                                 {{players}}
                                 <button ng-click="assignPlayer = !assignPlayer">Assign Player to a Team!</button>
                                 <table>
-                                    <tr ng-repeat="team in gameTeamscope">
+                                    <tr ng-repeat="team in gameTeamnamescope">
                                         <td>
                                             <button ng-click="playerToTeam(players, team)">{{team}}</button>
                                         </td>
