update free for all game
FFA - senseboxes are inserted as marker

--- a/www/templates/acc/acc-mygames.html
+++ b/www/templates/acc/acc-mygames.html
@@ -29,7 +29,7 @@
                    <!-- <h2 style="margin-top:10px;">Best Score: {{game.maxp}} </h2> -->
 
 
-                    <button id="fab" class="button button-balanced icon ion-ios-game-controller-b-outline button-fab button-fab-bottom-right" ng-click="gameSelect(game.name)"></button>
+                    <button id="fab" class="button button-balanced icon ion-ios-game-controller-b-outline button-fab button-fab-bottom-right" ng-click="gameSelect(game.creator, game.name)"></button>
                 </div>
             </a>
         </div>
