--- a/www/templates/after-login.html
+++ b/www/templates/after-login.html
@@ -17,10 +17,10 @@
             </a>
 
 
-            <a ui-sref="acc.mygames">
+            <a ui-sref="acc.chooseGameMode">
                 <div class="player">
                     <div class="type-picture">
-                        <div class="info" ui-sref="acc.mygames">
+                        <div class="info" ui-sref="acc.chooseGameMode">
                             <h2>{{'Play a game' | translate}}</h2>
                         </div>
                         <!-- <button class="button button-fab next button-calm icon ion-map waves-effect waves-button waves-light"
